GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/Bearer_Pass__c.object-meta.xml
<CustomObject>
    <label>Bearer Pass</label>
    <nameField>
        <label>Bearer Pass</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bearer Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>