GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/fields/Earmarked_For__c.field-meta.xml
<CustomField>
    <fullName>Earmarked_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earmarked For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bearer Passes (Earmarked For)</relationshipLabel>
    <relationshipName>Bearer_Passes1</relationshipName>
    <type>Lookup</type>
</CustomField>