GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/fields/Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Issued_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bearer Passes</relationshipLabel>
    <relationshipName>Bearer_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>