GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/fields/Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Due_Date__c</fullName>
    <label>Return Due Date</label>
    <type>Date</type>
</CustomField>