GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
                <color>#78C953</color>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
                <color>#FF0000</color>
                <label>Out of Stock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>