GearsetPOC/force-app/main/default/objects/Bearer_Pass__c/listViews/Valid_Bearer_Passes.listView-meta.xml
<ListView>
    <fullName>Valid_Bearer_Passes</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Issued__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Issued_To__c</columns>
    <columns>Return_Due_Date__c</columns>
    <columns>Earmarked_For__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>Valid Bearer Passes</label>
    <language>en_US</language>
</ListView>